# notes_serve

./: .travis.yml  README.md
renderer/: .gitignore  package-lock.json  package.json  process_dir.js  render_file.js
server/: .gitignore  .travis.yml  Cargo.toml
server/src/: configuration.rs  main.rs  search_engine.rs
server/static/: main.js  style.css
server/templates/: index.hbs
