[package]
name = "notes_serve"
version = "0.1.0"
authors = ["Philip Holland <pwaholland@gmail.com>"]
edition = "2018"

[dependencies]
rocket = "0.4.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.59"
tantivy = "0.14.0"
clap = "3.0.0-beta.2"

[dependencies.rocket_contrib]
version = "0.4.7"
default-features = false
features = ["handlebars_templates", "json", "serve"]